<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".VentaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#FFFFFF"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:fontFamily="sans-serif"
            android:text="@string/registro_de_ventas"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nombre_producto"
            android:textAlignment="textStart"
            android:textColor="#505050"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/e_nombrep"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:textColor="#020202"
            android:textSize="20sp"
            tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/codigo"
            android:textColor="#505050"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/e_codigop"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            android:textColor="#020202"
            android:textSize="20sp"
            tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cantidad"
            android:textColor="#505050"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/e_cantidadp"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="5"
            android:hint="@string/und"
            android:inputType="number"
            android:textColor="#020202"
            android:textSize="20sp"
            tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor_unidad"
            android:textAlignment="textStart"
            android:textColor="#505050"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/e_valoru"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="#020202"
            android:textSize="20sp"
            tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor_total"
            android:textColor="#505050"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/e_valort"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:autofillHints=" "
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="#020202"
            android:textSize="20sp"
            tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/b_guardarR"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/guardar"
            android:textAlignment="center"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>