<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="282dp"
        android:layout_height="63dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="143dp"
        android:fontFamily="sans-serif"
        android:text="@string/que_vas_hacer_hoy"
        android:textAlignment="center"
        android:textColor="#0B0B0B"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/b_venta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/b_venta"
        android:layout_width="105dp"
        android:layout_height="104dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="4dp"
        android:background="#0CE8E1"
        android:contentDescription="@string/todo"
        android:onClick="venta"
        android:src="@mipmap/images9"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384"
        tools:src="@mipmap/images9" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="25dp"
        android:text="@string/registrar_venta"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/b_inventario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_venta" />

    <ImageButton
        android:id="@+id/b_inventario"
        android:layout_width="102dp"
        android:layout_height="97dp"
        android:layout_marginStart="163dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/images8"
        android:contentDescription="@string/inventario"
        android:onClick="Inventario"
        android:src="@mipmap/images8"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@mipmap/images8" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/ir_al_inventario"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_inventario" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="22dp"
        android:layout_height="0dp"
        android:layout_marginStart="185dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="185dp"
        android:layout_marginBottom="140dp"
        android:background="#000000"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/Salir"
        android:onClick="Salir"
        android:rotation="44"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck"
        tools:src="@android:drawable/ic_input_add" />


</androidx.constraintlayout.widget.ConstraintLayout>