<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/e_precioC"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".AgregarProductoActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="87dp"
        android:fontFamily="sans-serif"
        android:text="@string/agregar_producto"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.119">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/e_nomProducto"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/nom_producto"
                android:inputType="text"
                android:textColor="#F5393838"
                android:textSize="20sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/e_cantidad"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/cantidades"
                android:inputType="number"
                android:textColor="#F5393838"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/e_precioCom"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/preciocom"
                android:inputType="numberDecimal"
                android:textColor="#F5393838"
                android:textSize="20sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/e_precioVen"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/precioven"
                android:inputType="numberDecimal"
                android:textColor="#F5393838"
                android:textSize="20sp"
                android:autofillHints="" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="#EB2AB3D5"
                android:ems="10"
                android:scrollbarSize="14dp" />

            <Button
                android:id="@+id/b_agregar"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:onClick="agregar"
                android:text="@string/agregar"
                android:textAlignment="center"
                app:iconTint="#0CD5EF"
                app:rippleColor="#18CDE4" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>