<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B0A0A"
    android:visibility="visible"
    tools:context=".OtraActivity"
    tools:ignore="MissingDefaultResource">

    <EditText
        android:id="@+id/edit1"
        android:layout_width="238dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:background="#040202"
        android:backgroundTint="#CDCDCD"
        android:breakStrategy="simple"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="228dp"
        android:layout_height="26dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="3dp"
        android:text="@string/textview4"
        android:textAlignment="textStart"
        android:textColor="#57FF5E"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/edit1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="228dp"
        android:layout_height="26dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="3dp"
        android:text="@string/Contraseña"
        android:textColor="#57FF5E"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/edit2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit1"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="142dp"
        android:layout_height="37dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="37dp"
        android:text="@string/Bienvenido"
        android:textColor="#57FF5E"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <EditText
        android:id="@+id/edit2"
        android:layout_width="238dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:background="#040202"
        android:backgroundTint="#CDCDCD"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="LabelFor,MissingConstraints,TextContrastCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="120dp"
        android:fontFamily="sans-serif"
        android:onClick="ingresar"
        android:text="@string/Ingresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit2"
        app:layout_constraintVertical_bias="0.206" />

</androidx.constraintlayout.widget.ConstraintLayout>